--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
           - name: Gulp
             args: "frontend_pipeline=Gulp"
           - name: Webpack
-            args: "frontend_pipeline=Webpack use_heroku=y"
+            args: "frontend_pipeline=Webpack"
           - name: Email Username
             args: "username_type=email project_name='Something superduper long - the great amazing project' project_slug=my_awesome_project"
 
