SWE-364: Fix Bug.

--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -19,11 +19,12 @@ services:
       - mailpit
       {%- endif %}
     volumes:
-      - .:/app:z
+      - ./app:/app:z
     environment:
       IPYTHONDIR: "/app/.ipython"
       DJANGO_SECRET_KEY: "LOCAL_INSECURE_SECRET_KEY"{%- if cookiecutter.use_celery == 'y' %}
       REDIS_URL: "redis://redis:6379/0"
+      CELERY_BROKER_URL: "redis://redis:6379/0"
       CELERY_FLOWER_USER: "!!!SET CELERY_FLOWER_USER!!!"
       CELERY_FLOWER_PASSWORD: "!!!SET CELERY_FLOWER_PASSWORD!!!"{%- endif %}
       POSTGRES_HOST: "postgres"
