--- a/{{cookiecutter.project_slug}}/compose/docs/Dockerfile
+++ b/{{cookiecutter.project_slug}}/compose/docs/Dockerfile
@@ -21,7 +21,7 @@ COPY ./requirements /requirements
 
 # create python dependency wheels
 RUN pip wheel --no-cache-dir --wheel-dir /usr/src/app/wheels  \
-  -r /requirements/local.txt -r /requirements/production.txt \
+  -r /requirements/local.txt \
   && rm -rf /requirements
 
 
@@ -55,7 +55,7 @@ COPY --from=python-build-stage /usr/src/app/wheels /wheels
 RUN pip install --no-cache /wheels/* \
   && rm -rf /wheels
 
-COPY ./compose/local/docs/start /start-docs
+COPY ./compose/docs/start /start-docs
 RUN sed -i 's/\r$//g' /start-docs
 RUN chmod +x /start-docs
 
