Update project to use different underscore vs dashed name (required by some AWS services that don't support underscores).

--- a/{{cookiecutter.project_slug}}/.devcontainer/devcontainer.json
+++ b/{{cookiecutter.project_slug}}/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 // For format details, see https://containers.dev/implementors/json_reference/
 {
-    "name": "{{cookiecutter.project_slug}}_dev",
+    "name": "{{cookiecutter.python_package_name}}_dev",
     "dockerComposeFile": [
         "../docker-compose.yml"
     ],
