--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -1,15 +1,15 @@
 volumes:
-  {{ cookiecutter.project_slug }}_local_postgres_data: {}
-  {{ cookiecutter.project_slug }}_local_postgres_data_backups: {}
-  {% if cookiecutter.use_celery == 'y' %}{{ cookiecutter.project_slug }}_local_redis_data: {}{% endif %}
+  {{cookiecutter.python_package_name}}_local_postgres_data: {}
+  {{cookiecutter.python_package_name}}_local_postgres_data_backups: {}
+  {% if cookiecutter.use_celery == 'y' %}{{cookiecutter.python_package_name}}_local_redis_data: {}{% endif %}
 
 services:
   django: &django
     build:
       context: .
       dockerfile: compose/django/Dockerfile
-    image: {{ cookiecutter.project_slug }}_local_django
-    container_name: {{ cookiecutter.project_slug }}_local_django
+    image: {{cookiecutter.python_package_name}}_local_django
+    container_name: {{cookiecutter.python_package_name}}_local_django
     working_dir: /app/
     depends_on:
       - postgres
@@ -30,7 +30,7 @@ services:
       CELERY_FLOWER_PASSWORD: "!!!SET CELERY_FLOWER_PASSWORD!!!"{%- endif %}
       POSTGRES_HOST: "postgres"
       POSTGRES_PORT: "5432"
-      POSTGRES_DB: "{{ cookiecutter.project_slug }}"
+      POSTGRES_DB: "{{cookiecutter.python_package_name}}"
       POSTGRES_USER: "!!!SET POSTGRES_USER!!!"
       POSTGRES_PASSWORD: "!!!SET POSTGRES_PASSWORD!!!"
     ports:
@@ -41,22 +41,22 @@ services:
     build:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
-    image: {{ cookiecutter.project_slug }}_production_postgres
-    container_name: {{ cookiecutter.project_slug }}_local_postgres
+    image: {{cookiecutter.python_package_name}}_production_postgres
+    container_name: {{cookiecutter.python_package_name}}_local_postgres
     volumes:
-      - {{ cookiecutter.project_slug }}_local_postgres_data:/var/lib/postgresql/data
-      - {{ cookiecutter.project_slug }}_local_postgres_data_backups:/backups
+      - {{cookiecutter.python_package_name}}_local_postgres_data:/var/lib/postgresql/data
+      - {{cookiecutter.python_package_name}}_local_postgres_data_backups:/backups
     environment:
       POSTGRES_HOST: "postgres"
       POSTGRES_PORT: "5432"
-      POSTGRES_DB: "{{ cookiecutter.project_slug }}"
+      POSTGRES_DB: "{{cookiecutter.python_package_name}}"
       POSTGRES_USER: "!!!SET POSTGRES_USER!!!"
       POSTGRES_PASSWORD: "!!!SET POSTGRES_PASSWORD!!!"
 
   docs:
     <<: *django
-    image: {{ cookiecutter.project_slug }}_local_docs
-    container_name: {{ cookiecutter.project_slug }}_local_docs
+    image: {{cookiecutter.python_package_name}}_local_docs
+    container_name: {{cookiecutter.python_package_name}}_local_docs
     build:
       context: .
       dockerfile: compose/docs/Dockerfile
@@ -71,7 +71,7 @@ services:
 
   mailpit:
     image: docker.io/axllent/mailpit:latest
-    container_name: {{ cookiecutter.project_slug }}_local_mailpit
+    container_name: {{cookiecutter.python_package_name}}_local_mailpit
     ports:
       - "8025:8025"
 
@@ -80,16 +80,16 @@ services:
 
   redis:
     image: docker.io/redis:6
-    container_name: {{ cookiecutter.project_slug }}_local_redis
+    container_name: {{cookiecutter.python_package_name}}_local_redis
     {% if cookiecutter.use_celery == 'y' %}
     volumes:
-      - {{ cookiecutter.project_slug }}_local_redis_data:/data
+      - {{cookiecutter.python_package_name}}_local_redis_data:/data
     {% endif %}
 
   celeryworker:
     <<: *django
-    image: {{ cookiecutter.project_slug }}_local_celeryworker
-    container_name: {{ cookiecutter.project_slug }}_local_celeryworker
+    image: {{cookiecutter.python_package_name}}_local_celeryworker
+    container_name: {{cookiecutter.python_package_name}}_local_celeryworker
     depends_on:
       - redis
       - postgres
@@ -101,8 +101,8 @@ services:
 
   celerybeat:
     <<: *django
-    image: {{ cookiecutter.project_slug }}_local_celerybeat
-    container_name: {{ cookiecutter.project_slug }}_local_celerybeat
+    image: {{cookiecutter.python_package_name}}_local_celerybeat
+    container_name: {{cookiecutter.python_package_name}}_local_celerybeat
     depends_on:
       - redis
       - postgres
@@ -114,8 +114,8 @@ services:
 
   flower:
     <<: *django
-    image: {{ cookiecutter.project_slug }}_local_flower
-    container_name: {{ cookiecutter.project_slug }}_local_flower
+    image: {{cookiecutter.python_package_name}}_local_flower
+    container_name: {{cookiecutter.python_package_name}}_local_flower
     ports:
       - '5555:5555'
     command: /start-flower
@@ -127,8 +127,8 @@ services:
     build:
       context: .
       dockerfile: compose/node/Dockerfile
-    image: {{ cookiecutter.project_slug }}_local_node
-    container_name: {{ cookiecutter.project_slug }}_local_node
+    image: {{cookiecutter.python_package_name}}_local_node
+    container_name: {{cookiecutter.python_package_name}}_local_node
     depends_on:
       - django
     volumes:
