Fix file paths inside docker file.

--- a/{{cookiecutter.project_slug}}/compose/django/Dockerfile
+++ b/{{cookiecutter.project_slug}}/compose/django/Dockerfile
@@ -84,6 +84,6 @@ RUN chmod +x /start-flower
 {% endif %}
 
 # copy application code to WORKDIR
-COPY . ${APP_HOME}
+COPY ./app/ ${APP_HOME}
 
 ENTRYPOINT ["/entrypoint"]
