Add redis as always provided.

--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       - ./app:/app:z
     environment:
       IPYTHONDIR: "/app/.ipython"
-      DJANGO_SECRET_KEY: "LOCAL_INSECURE_SECRET_KEY"{%- if cookiecutter.use_celery == 'y' %}
-      REDIS_URL: "redis://redis:6379/0"
+      DJANGO_SECRET_KEY: "LOCAL_INSECURE_SECRET_KEY"
+      REDIS_URL: "redis://redis:6379/0"{%- if cookiecutter.use_celery == 'y' %}
       CELERY_BROKER_URL: "redis://redis:6379/0"
       CELERY_FLOWER_USER: "!!!SET CELERY_FLOWER_USER!!!"
       CELERY_FLOWER_PASSWORD: "!!!SET CELERY_FLOWER_PASSWORD!!!"{%- endif %}
