Add collecting static files to build script.

--- a/{{cookiecutter.project_slug}}/compose/django/Dockerfile
+++ b/{{cookiecutter.project_slug}}/compose/django/Dockerfile
@@ -86,4 +86,6 @@ RUN chmod +x /start-flower
 # copy application code to WORKDIR
 COPY ./app/ ${APP_HOME}
 
+RUN python manage.py collectstatic
+
 ENTRYPOINT ["/entrypoint"]
