--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - ./app:/app:z
     environment:
       IPYTHONDIR: "/app/.ipython"
+      REQUIRE_SECURE_CONNECTIONS: "False"
       DJANGO_SECRET_KEY: "LOCAL_INSECURE_SECRET_KEY"
       ENABLE_SENTRY: "False"
       REDIS_URL: "redis://redis:6379/0"{%- if cookiecutter.use_celery == 'y' %}
