--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -41,7 +41,7 @@ django_settings_module = "config.settings.test"
 
 # ==== djLint ====
 [tool.djlint]
-blank_line_after_tag = "load,extends"
+blank_line_after_tag = "load,extends,include,endblock"
 close_void_tags = true
 format_css = true
 format_js = true
